--- a/assets/themes/base/css/rosobe.css
+++ b/assets/themes/base/css/rosobe.css
@@ -3,27 +3,31 @@
   padding: 0;
 }
 body {
-  font: normal 16px Arial, Tahoma, sans-serif;
+  font: normal 14px 'Open Sans', Tahoma, sans-serif;
   color: #333;
 }
 h2 {
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Open Sans', sans-serif;
   font-size: 2.4em;
   width: auto;
 }
 h4 {
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.1em;
   width: auto;
   margin: 0 0 0.7em 0;
   color: #f59b26;
 }
-h5 {
-  font-family: 'Comfortaa', cursive;
+footer h5, h5 {
+  font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   width: auto;
   margin: 0 0 0.5em 0;
-  color: #f59b26;
+  color: #FFF;
+}
+h5 {
+  color: #E36F35;
+  font-weight: bold;
 }
 li {
   list-style: none;
@@ -82,7 +86,7 @@ ul.datas {
   margin: 0.2em 0;
 }
 .datas li a {
-  color: #3e5d62;
+  color: #E36F35;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -92,7 +96,8 @@ h1, ul.datas {
   vertical-align: middle!important;
 }
 nav {
-  background: #3e5d62;
+  /*background: #3e5d62;*/
+  background: #E36F35;
   margin: 0.5em 0 0 0;
   width: auto;
   margin-bottom: 0!important;
@@ -142,13 +147,12 @@ ul#nav-primary li span.badge-important {
 }
 .wrap-content {
   padding: 0.7em;
-  background: #fafafc;
-  border: 1px solid #d6d9d9;
+  
   border-top: none;
   margin-bottom: 1em;
 }
 .nav-primary, .footer {
-  background: #3e5d62;
+  background: #E36F35;
 }
 
 .nav-panel > li {
@@ -196,7 +200,7 @@ figcaption p {
 }
 footer {
   font-size: 0.9em;
-  padding: 0.7em 1em;
+  padding: 1.4em 1em;
 }
 .middle {
     border-left: 1px solid #ccc;
@@ -346,7 +350,6 @@ div[class^='div-'] {
 .recomendaciones div:nth-child(even) figure figcaption p {
   margin-bottom: 0.5em;
 }
-
 
 .one-of-two {
   width: 49%;
