--- a/assets/themes/base/css/default.css
+++ b/assets/themes/base/css/default.css
@@ -8,22 +8,20 @@ Author URI: http://dev7studios.com
 Supports Thumbs: true
 */
 
-.theme-default .nivo-box {
-	
-}
 .theme-default .nivoSlider {
 	position:relative;
-	background:#fff url(loading.gif) no-repeat 50% 50%;
-    padding-bottom: 0;
+	background:#fff url(../img/loading.gif) no-repeat 50% 50%;
+    margin-bottom:10px;
+    -webkit-box-shadow: 0px 1px 5px 0px #4a4a4a;
+    -moz-box-shadow: 0px 1px 5px 0px #4a4a4a;
+    box-shadow: 0px 1px 5px 0px #4a4a4a;
+    margin-bottom: 10px!important;
 }
 .theme-default .nivoSlider img {
 	position:absolute;
-	top: 0px;
-	left :0px;
-	height: 344px!important;
-	/*vertical-align: baseline !important;
-    max-width: none !important;*/
-    display: none;
+	top:0px;
+	left:0px;
+	display:none;
 }
 .theme-default .nivoSlider a {
 	border:0;
@@ -32,13 +30,14 @@ Supports Thumbs: true
 
 .theme-default .nivo-controlNav {
 	text-align: center;
-	padding: 20px 0;
+	padding: 10px 0;
+	padding-top: 0;
 }
 .theme-default .nivo-controlNav a {
 	display:inline-block;
 	width:22px;
 	height:22px;
-	background:url(bullets.png) no-repeat;
+	background:url(../img/bullets.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	margin: 0 2px;
@@ -51,7 +50,7 @@ Supports Thumbs: true
 	display:block;
 	width:30px;
 	height:30px;
-	background:url(arrows.png) no-repeat;
+	background:url(../img/arrows.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	opacity: 0;
@@ -90,7 +89,7 @@ Supports Thumbs: true
 	margin-bottom: 5px;
 }
 .theme-default .nivo-controlNav.nivo-thumbs-enabled img {
-	display: none;
+	display: block;
 	width: 120px;
 	height: auto;
 }
