--- a/assets/themes/base/css/rosobe.css
+++ b/assets/themes/base/css/rosobe.css
@@ -152,6 +152,11 @@ ul#nav-primary li span.badge-important {
 .footer {
     background: #E36F35;
 }
+.inicio-servicios > div > div > span.glyphicon {
+    font-size: 1.7em!important;
+    color: #E36F35;
+    margin: 1em auto;
+}
 .inicio-servicios > div > div {
     text-align: center;
 }
@@ -333,6 +338,56 @@ ul.productos figure figcaption label a {
 .ribbon-green:after {
   right: 0;
 }​
+
+.ribbon-wrapper-green2 {
+    width: 85px;
+    height: 88px;
+    overflow: hidden;
+    position: absolute;
+    top: -1px;
+    right: 14px;
+}
+.ribbon-green2 {
+  font: bold 12px 'Open Sans', sans-serif;
+  color: #333;
+  text-align: center;
+  text-shadow: rgba(255,255,255,0.5) 0px 1px 0px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform:    rotate(45deg);
+  -ms-transform:     rotate(45deg);
+  -o-transform:      rotate(45deg);
+  position: relative;
+  padding: 7px 0;
+  left: -5px;
+  top: 15px;
+  width: 120px;
+  background-color: #BFDC7A;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#BFDC7A), to(#8EBF45)); 
+  background-image: -webkit-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:    -moz-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:     -ms-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:      -o-linear-gradient(top, #BFDC7A, #8EBF45); 
+  color: #6a6340;
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
+  box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
+}
+
+.ribbon-green2:before, .ribbon-green2:after {
+  content: "";
+  border-top:   3px solid #6e8900;   
+  border-left:  3px solid transparent;
+  border-right: 3px solid transparent;
+  position:absolute;
+  bottom: -3px;
+}
+
+.ribbon-green2:before {
+  left: 0;
+}
+.ribbon-green2:after {
+  right: 0;
+}​
 /**
  * Fin de Productos
  */
@@ -381,7 +436,7 @@ ul.productos figure figcaption label a {
 /**
  * Fin de Detalle
  */
-.galeria img {
+/*.galeria img {
     width: 100%;
 }
 .galeria .galeria-thumbs {
@@ -390,4 +445,13 @@ ul.productos figure figcaption label a {
 .galeria .galeria-thumbs img {
     margin: 0.5em;
     width: 150px;
+}*/
+ul.galeria-thumbs li {
+    display: inline-block;
+    margin: 0.5em;
 }
+ul.galeria-thumbs li a img {
+    height: 150px;
+    width: 200px;
+}
+
